@@ -95,6 +95,8 @@ mnemosyne.components.append(("mnemosyne.pyqt_ui.html_statistics_wdgt",
                              "HtmlStatisticsWdgt"))
 mnemosyne.components.append(("mnemosyne.pyqt_ui.progress_dlg",
                              "ProgressDlg"))
+mnemosyne.components.append(("mnemosyne.pyqt_ui.mp3_clip_prevention",
+                             "Mp3ClipPrevention"))
 mnemosyne.extra_components_for_plugin["CrammingPlugin"] = \
                             [("mnemosyne.pyqt_ui.review_wdgt_cramming",
                              "ReviewWdgtCramming")]
